# multi-agent-research

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/processed/: features_daily.csv  features_daily_data_dictionary.md
data/raw/: coffee_extraction_metadata.json  coffee_fred_extraction_metadata.json  coffee_fred_macro_fx_daily.csv  coffee_openmeteo_daily.csv  coffee_openmeteo_extraction_metadata.json  coffee_yahoo_ohlcv_1d.csv
src/langgraphagenticai/: __init__.py  financial_researcher.ipynb  main.py
src/langgraphagenticai/data/processed/: features_daily.csv  features_daily_data_dictionary.md
src/langgraphagenticai/data/raw/: coffee_extraction_metadata.json
src/langgraphagenticai/graph/: pipeline.py
src/langgraphagenticai/nodes/: __init__.py  build_features_node.py  fred_data_extraction_node.py  open_meteo_weather_node.py  validate_data_node.py  yahoo_data_extraction_node.py
src/langgraphagenticai/state/: __init__.py  commodity_state.py
